--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">ComapassApp</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="app_name">Compass App</string>
+    <string name="tab_text_1">Instructions</string>
+    <string name="tab_text_2">Compass</string>
+    <string name="tab_text_3">About us</string>
 </resources>
