Implemented the framework for google_maps_api with google_maps_api.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="tab_text_1">Instructions</string>
     <string name="tab_text_2">Compass</string>
     <string name="tab_text_3">About us</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
